tests/snapshots/usage/apps__pause.snap
---
source: tests/cli/snapshots.rs
---
$ vendo apps pause
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <appId>

Usage: vendo apps pause <appId>

For more information, try '--help'.

$ vendo apps pause --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <appId>","code":null,"status":null,"requestId":null}}
